# dataReaderWriter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
construct-examples/: function_tests.ipynb
construct-examples/scdms_soudan/: README.md  automated_parser.py  create_tables.py  csv_metadata.py  script.deb.sh
data/: README.md  parametric_generator.ipynb  scdms_soudan_const_parser.ipynb
data/.ipynb_checkpoints/: scdms_soudan_const_parser-checkpoint.ipynb
dfdl/: README.md
dfdl/src/scdms/xsd/: config.xml  (+3 more)
docker/: .Dockerfile.swp  Dockerfile  README.md
docs/: README.md  data.md  handwritten.md  kaitai-awkward-example.md  kaitai-simple-example.md  kaitai-struct.md  main.md  scdms_struct.md  simple-kaitai-example.md
handwritten/: README.md  Test  animal_dev.h  kaitai-template.cpp  toy_data_awkward.cpp  toy_data_vectors.cpp
handwritten/awk_kt_template/: makefile
handwritten/awkward_testing/: makefile
kaitai/: README.md  kaitai-dev.md  kaitai-stream-cpp-runtime
kaitai-examples/: README.md  kaitai-dev.md
kaitai-examples/ksy/: animal_colony.ksy  null_terminator_parser.ksy  pixie4e.ksy  scdms_soudan.ksy  scdms_v8.ksy  wave_parser.ksy
kaitai-examples/simple_example/: makefile
kaitai/awkward_example/: CMakeLists.txt  README.md
kaitai/awkward_example/cmake/: CheckStdFileSystem.cmake  DownloadCLI11.cmake
kaitai/awkward_example/data/: animal_raw
kaitai/awkward_example/src/: animal.cpp  animal.dot  animal.h  animal_reference.cpp  animal_reference.h  main.cpp
kaitai/awkward_example/src/kaitai/: exceptions.h  kaitaistream.h  kaitaistruct.h
kaitai/awkward_example/src/kt/: animal.cpp
kaitai/ksy/: Parametric Parser.ksy  ParametricParser.ksy  WaveParser.ksy  animal_stats.ksy  int_float_test.ksy  scdms_no_enums_v8.ksy  scdms_soudan.ksy  scdms_v1.ksy  scdms_v8.ksy  small_param_test.ksy  wave_parser.ksy
kaitai/simple_example/: README.md  makefile  run.sh
kaitai/simple_kaitai_example/: README.md  makefile  run.sh  setup.sh
scdms_soudan/: automated_parser.py  create_tables.py  csv_metadata.py  fetch_metadata.py  file_searcher.ipynb  metadata.ipynb  metadata.py  metadata_small.py
scdms_struct/: README.md  midas.ksy  scdms.ksy
simple_kaitai_example/: animal.ksy  run.sh  setup.sh
tests/: example.cpp  read-bin.cpp  test.cpp  test_awkward_toy.cpp
(+36 files in other folders)
